KService: allow .desktop files without an Exec line

qemu ships one of those, just to associate icons with windows on
wayland, even though there's nothing to execute (the desktop file
has NoDisplay set).

We don't need to warn here, surely we'll get an error when launching
such a desktop file (if it doesn't have NoDisplay), at runtime, right?

BUG: 430157
(cherry picked from commit 25917d20effad77ac6976a672430a3aac19575d2)